--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,7 @@
 es:
+  busqueda: Búsqueda
+  quienes_somos: Quínes somos
+  ventas: Ventas
   date:
     abbr_day_names:
     - dom
@@ -9,7 +12,7 @@ es:
     - vie
     - sáb
     abbr_month_names:
-    - 
+    -
     - ene
     - feb
     - mar
@@ -35,7 +38,7 @@ es:
       long: ! '%A, %d de %B de %Y'
       short: ! '%d de %b'
     month_names:
-    - 
+    -
     - enero
     - febrero
     - marzo
